--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="forgetForm">
-                <form  action="">
+                <form action="">
                     <div class="title">
                         <h2> <img src="images/log-in.svg" alt=""> Crie sua Conta</h2>
                         <p>Entre com suas informações de cadastro</p>
@@ -80,7 +80,7 @@
                             <img src="images/lock.svg" alt="lock">
                             <input type="password" name="password"  placeholder="Digite sua senha">
                             <i class="far fa-eye-slash"></i>
-                            <img class="eye" src="images/eye.svg" alt="eye">
+                            <img src="images/eye.svg" alt="eye">
                         </div>
                     </div>
 
@@ -89,7 +89,7 @@
                         <div  class="Confirmsenha">
                             <img class="lock" src="images/lock.svg" alt="lock">
                             <input type="password" name="password" placeholder="Confirm sua senha">
-                            <img class="eye" src="images/eye.svg" alt="eye">
+                            <img src="images/eye.svg" alt="eye">
                         </div>
                     </div>
 
